--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,5 @@
     </div><!-- End class chatbot --> 
 </div><!-- End class container -->
 </body>
-<script src="./bot.js"></script>
+<script src="bot.js"></script>
 </html>
